@@ -2,16 +2,16 @@ This NEWS file records noteworthy changes, very tersely.
 See the manual for detailed information.
 
   Copyright (C) 1992, 1993, 1995, 1996, 1997, 1998, 1999, 2000, 2001,
-  2002, 2003, 2005 Free Software Foundation, Inc.  
+  2002, 2003, 2005, 2006 Free Software Foundation, Inc.  
 
   Copying and distribution of this file, with or without modification,
   are permitted in any medium without royalty provided the copyright
   notice and this notice are preserved.
 
-
+* Remove creeping non-feature of reading mail; simplify code accordingly.
 * Distribution:
   . Use gnulib for shared source files, such as texinfo.tex and getopt.c.
-  . automake 1.9.5, autoconf 2.59, gettext 0.14.5.
+  . update for automake 1.9.5, autoconf 2.60, gettext 0.14.6.
 
 
 Version 2.1.2 (20 July 2002)
