@@ -1,3 +1,8 @@
+2006-07-16  Karl Berry  <karl@gnu.org>
+
+	* configure.ac (AM_INIT_AUTOMAKE): remove check-news.
+	* Makefile.am (EXTRA_DIST): no more bugs; simplfy other ex
+
 2006-05-08  Karl Berry  <karl@gnu.org>
 
 	* autogen.sh: rename from bootstrap and change msg.
